# Mango

./: .gitignore  README.md  pyproject.toml  run_server.py  run_server.spec
gandy/: app.py  book_routes.py  config_routes.py  paraphrase_routes.py  randy_routes.py  task1_routes.py  task2_routes.py  task3_routes.py
gandy/full_pipelines/: advanced_pipeline.py  base_app.py  base_pipeline.py
gandy/image_cleaning/: base_image_clean.py  blur_and_mask_image_clean.py  blur_image_clean.py  no_image_clean.py  simple_image_clean.py  telea_image_clean.py  text_fill_clean.py  tnet_edge_image_clean.py  tnet_image_clean.py
gandy/image_redrawing/: amg_convert.py  base_image_redraw.py  image_redraw_big_global.py  image_redraw_global.py  image_redraw_v2.py  neighbor_redraw.py  wand_blur_redraw.py  wand_caption_redraw.py
gandy/onnx_models/: base_onnx_model.py  detrg.py  doc_repair.py  edge_connect.py  marian.py  marian_knn.py  mtbig.py  rcnn50.py  tr_ocr.py  ttnet.py  vaet.py
gandy/spell_correction/: base_spell_correction.py  doc_repair_spell_correction.py  rule_based_spell_correction.py  vaet_paraphrase.py
gandy/text_detection/: base_image_detection.py  detrg_image_detection.py  rcnn_image_detection.py
gandy/text_recognition/: base_text_recognition.py  text_recognition.py  tr_recognition.py
gandy/translation/: base_translation.py  graves_translation.py  kretrieval_translation.py  seq2seq_lite_translation.py  seq2seq_translation.py
gandy/tricks/: ffc_resnet_generator.py  translate_epub.py  translate_web.py
gandy/utils/: clean_text.py  context_state.py  frame_input.py  (+9 more)
(+14 files in other folders)
